--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -8,7 +8,18 @@
 <h1 th:text="'Owner Page'">Owner Page</h1>
 
 <table>
+    <tr>
 
+        <td>ID </td>
+        <td>First Name</td>
+        <td>Last Name</td>
+
+    </tr>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner.id}">ID </td>
+        <td th:text="${owner.firstName}">First Name</td>
+        <td th:text="${owner.lastName}">Last Name</td>
+    </tr>
 
 </table>
 
