--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -8,6 +8,18 @@
 <h1 th:text="'Vet Page'">Vet Page</h1>
 
 <table>
+    <tr>
+
+        <td>ID </td>
+        <td>First Name</td>
+        <td>Last Name</td>
+
+    </tr>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">ID </td>
+        <td th:text="${vet.firstName}">First Name</td>
+        <td th:text="${vet.lastName}">Last Name</td>
+    </tr>
 
 
 </table>
