--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
-    <meta charset="UTF-8">
-    <title>Pet Clinic Vet</title>
+    <meta charset="UTF-8"/>
+    <title>List of Vets</title>
 </head>
 <body>
-<h1 th:text="'Vet Page'">Vet Page</h1>
+<!--/*@thymesVar id="vet" type="guru.springframework.sfgpetclinic.model.Vet"*/-->
+<h2>Veterinarians</h2>
 
-<table>
+<table id="vets" class="table table-striped">
+    <thead>
     <tr>
-
-        <td>ID </td>
-        <td>First Name</td>
-        <td>Last Name</td>
-
+        <th>Name</th>
     </tr>
+    </thead>
+    <tbody>
     <tr th:each="vet : ${vets}">
-        <td th:text="${vet.id}">ID </td>
-        <td th:text="${vet.firstName}">First Name</td>
-        <td th:text="${vet.lastName}">Last Name</td>
+        <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
     </tr>
-
-
+    </tbody>
 </table>
-
 </body>
 </html>
